# track-my-spending-desktop

./: CMakeLists.txt  LICENSE  README.md  track-my-spending-desktop_en_US.ts
src/: WindowSetup.cpp  WindowSetup.h  main.cpp
src/components/: MainLayout.cpp  MainLayout.h
src/headers/: WindowSetup.h
